<resources>
    <string name="app_name">EarthBnB</string>

    <!-- Hints -->
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_confirmar_contrasena">Confirmar contraseña</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_pais">País</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_search_property">Buscar propiedad</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_tipo_usuario">Tipo de usuario</string>

    <!-- Labels -->
    <string name="label_iniciar_sesion">Iniciar sesión</string>
    <string name="label_registrarse">Registrarse</string>
    <string name="label_galeria">Galeria</string>
    <string name="label_camara">Cámara</string>
    <string name="label_registrarme">Registrarme</string>
    <string name="label_agregar_alojamiento">Agregar Alojamiento</string>
    <string name="label_arrendar_alojamiento">Realizar Reserva</string>
    <string name="label_ver_alojamiento">Ver Alojamiento</string>
    <string name="label_enviar">Enviar</string>
    <string name="label_hueped">Huésped</string>
    <string name="label_anfitrion">Anfitrión</string>
    <string name="label_foto_perfil">Foto de perfil</string>
    <string name="label_seleccionar_ubicacion">Selecciona una ubicación</string>

    <string name="label_tipoAlojamiento">Tipo Alojamiento</string>
    <string name="label_precio">Precio noche(COP)</string>
    <string name="label_numero_huspedes">Cantidad de huéspedes</string>
    <string name="label_numero_camas">Cantidad de camas</string>
    <string name="label_numero_banos">Cantidad de baños</string>
    <string name="label_numero_habitaciones">Cantidad de habitaciones</string>
    <string name="label_bano_privado">¿El baño es privado?</string>
    <string name="label_wifi">Wifi</string>
    <string name="label_tv">TV</string>
    <string name="label_armario">Armario</string>
    <string name="label_escritorio">Escritorio</string>
    <string name="label_desayuno">Desayuno</string>
    <string name="label_acceso_cocina">Acceso a la cocina</string>
    <string name="label_elementos_basicos">Elementos basicos</string>
    <string name="label_agregar_fotos">Agregar fotos</string>
    <string name="label_ver_fotos">Ver fotos</string>
    <string name="label_elementos_basicos_descripcion">Elementos básicos: Toallas, sábanas, jabón, papel higiénico, almohadas, crema dental, café</string>
    <string name="label_fecha_inicio">Escoger fecha de inicio</string>
    <string name="label_fecha_fin">Escoger fecha final</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_desde">Desde</string>
    <string name="label_hasta">Hasta</string>

    <string name="label_filtrar_fecha">Filtrar por fecha</string>

    <!-- Mensajes -->
    <string name="msg_error_autenticacion">Se ha producido un error al autenticarse</string>

    <!-- Opciones del menú -->
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_hospedajes">Buscar hospedajes</string>
    <string name="menu_agregar_hospedaje">Agregar hospedaje</string>
    <string name="title_activity_maps">Map</string>

    <!-- Opciones del menú hamburguesa/navegación -->
    <string name="nav_menu_abrir">Abrir menu de navegación</string>
    <string name="nav_menu_cerrar">Cerrar menu de navegación</string>

    <!-- Items de Spinners -->
    <string-array name="tipo_array">
        <item>Apartamento</item>
        <item>Casa</item>
        <item>Habitacion</item>
        <item>Cabaña</item>
    </string-array>

    <string-array name="cant_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>

    </string-array>

    <!-- <string name=""></string> -->
</resources>
