<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient2"
    tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:hint="@string/hint_correo"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_ingreso_usuario" />

        <ImageView
            android:id="@+id/img_ingreso_usuario"
            android:layout_width="138dp"
            android:layout_height="116dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/hint_contrasena"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_correo" />

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="59dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contrasena">

            <Button
                android:id="@+id/btn_ingreso"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/label_iniciar_sesion"
                android:textStyle="bold"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="335dp" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/label_registrarse"
                android:textStyle="bold"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                tools:layout_editor_absoluteX="262dp"
                tools:layout_editor_absoluteY="407dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>