<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MapsActivity"
    tools:openDrawer="">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="60dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MapsActivity" />


            <EditText
                android:id="@+id/et_ubicacion_busqueda"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/bordes_redondeados"
                android:ems="10"
                android:hint="@string/hint_direccion"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#777777" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados4"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_desde"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_desde"
                        android:textColor="@color/common_google_signin_btn_text_dark" />

                    <ImageButton
                        android:id="@+id/btn_fecha_desde"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/bordes_redondeados3"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        app:srcCompat="@drawable/ic_fecha" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hasta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_hasta"
                        android:textColor="@color/common_google_signin_btn_text_dark" />

                    <ImageButton
                        android:id="@+id/btn_fecha_hasta"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/bordes_redondeados3"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        app:srcCompat="@drawable/ic_fecha" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_filtrar_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/bordes_redondeados3"
                    android:text="@string/label_filtrar_fecha"
                    android:textColor="@color/common_google_signin_btn_text_dark" />

            </LinearLayout>



        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>

